# chat-app

backend/: auth.py  main.py  models.py  pyproject.toml  requirements.txt
backend/scripts/: create_user.py
frontend/: next.config.js  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/app/: layout.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: ChatInterface.tsx  LoginForm.tsx  Providers.tsx  RegisterForm.tsx
frontend/src/store/: authStore.ts  chatStore.ts
frontend/src/styles/: globals.scss
frontend/src/types/: index.ts
frontend/src/utils/: api.ts
