[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.12.1",
    "annotated-types==0.7.0",
    "anyio==3.7.1",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "bcrypt==4.0.1",
    "certifi==2025.10.5",
    "cffi==2.0.0",
    "chromadb>=1.3.0",
    "click==8.3.0",
    "colorama==0.4.6",
    "distro==1.9.0",
    "fastapi==0.104.1",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.27.0",
    "idna==3.11",
    "jiter==0.11.1",
    "langchain>=1.0.3",
    "mako==1.3.10",
    "markupsafe==3.0.3",
    "openai==1.3.7",
    "passlib==1.7.4",
    "psycopg==3.2.12",
    "psycopg-binary==3.2.12",
    "psycopg2-binary==2.9.11",
    "pycparser==2.23",
    "pydantic==2.12.3",
    "pydantic-core==2.41.4",
    "pyjwt==2.8.0",
    "python-dotenv==1.0.0",
    "setuptools==80.9.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.44",
    "starlette==0.27.0",
    "tqdm==4.67.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "uvicorn==0.24.0",
    "wheel==0.45.1",
]
